# SPO

LK/: .gitignore  CMakeLists.txt  KhamchievaLeylaP4115.md  LK.sln  LK.vcxproj  LK.vcxproj.filters  Makefile  README.txt  ast.dot  calc.src  calculator.asm  call_graph.dot  cfg.c  cfg.h  cod.c  codegen.c  codegen.h  control.txt  diagram.md  error.c  error.h  export_ast.c  export_ast.h  export_cfg.c  export_cfg.h  export_code.c  export_code.h  input.ast.json  input.main.dot  input.txt  json_to_dot.py  lex.yy.c  lexems.l  main.c  main.linear_code.txt  main.txt  math.txt  node.c  node.h  parser.output  (+9 more)
LK/include/: cfg.h  codegen.h  error.h  export_ast.h  export_cfg.h  export_code.h  node.h
LK/parser/: lex.yy.c  lexems.l  parser.tab.c  parser.tab.h  parser.y
LK/src/: cfg.c  cod.c  codegen.c  export_ast.c  export_cfg.c  export_code.c  main.c  node.c
LK/test_input/: ast.dot  ast.json  input.ast.json  input.txt
LK/test_main/: main.ast.dot  main.ast.json
LK/tools/: json_to_dot.py
LK/vm/: test_vm.c  vm.c  vm.h  vm_integration.c
